
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ islower (int) ;

int toupper(int c)
{
    if (islower(c))
        c -= 32;

    return c;
}
